# lora-novel-craft

./: .gitignore  README.md  forge.py  get_current_datetime.sh  pyproject.toml  scene_creator.py
.claude/agents/: agent-base_json_creator.md
data/epub/: Jack_London-The_Iron_Heel.epub
data/json_base/: Jack_London-The_Iron_Heel.json
data/json_raw/: Jack_London-The_Iron_Heel.json
data/json_scenes/: Jack_London-The_Iron_Heel.json
data/md_clean/: Jack_London-The_Iron_Heel-WORLDRULES.md  Jack_London-The_Iron_Heel-foreword.md  Jack_London-The_Iron_Heel-world_context.md  Jack_London-The_Iron_Heel.md
data/md_raw/: Jack_London-The_Iron_Heel.md
prompts/: scene_splitting.md  world_context.md
prompts/compress/: instruction.md  systemmessage.md
prompts/inference/: systemmessage.md
prompts/instruction/: systemmessage.md
prompts/instruction_creation/: input_format.md  instruction.md  systemmessage.md
prompts/scene/: systemmessage.md
prompts/scene_creation/: input_format.md  instruction.md  systemmessage.md
prompts/scene_splitting/: systemmessage.md
prompts/summary/: instruction_narrative.md  instruction_reference.md  systemmessage.md
prompts/summary_creation/: input_format.md  instruction.md  instruction_narrative.md  instruction_reference.md  systemmessage.md
scripts/: book_to_scenes.py  calc_tokens.py  md_cleaner.py  replace_words.py  scene_creator.py
src/: book_creator.py  config.py  dataset_compiler.py  instruction_creator.py  logger.py  manual_scene_adder.py  md_cleaner.py  remove_ref_scenes.py  scene_creator.py  summary_creator.py  utils.py
(+14 files in other folders)
