[project]
name = "lora-novel-craft"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"